# ELFLoader

./: .gitpod.yml  CMakeLists.txt  README.md  elf-defines.h  elf-header.c  elf-header.h  main.c
Includes/: ELF.h  elf.h
Includes/ELF/: ProgramHeader.h  SectionHeader.h
Source/: elf-fheader.c  elf-pheader.c  elf-sheader.c  main.c
Sources/: ELF.c  Main.c  ProgramHeader.c  SectionHeader.c
